öğrenci öğretmen tabloları oluşturuldu

--- a/KidKinder/Views/Classes/Index.cshtml
+++ b/KidKinder/Views/Classes/Index.cshtml
@@ -5,8 +5,8 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
+<center><h2>Sınıf Listesi</h2></center>
 
-<h2>SINIFLAR</h2>
 <br />
 
 <table class="table table-border">
