--- a/KidKinder/Views/Default/partialNavbar.cshtml
+++ b/KidKinder/Views/Default/partialNavbar.cshtml
@@ -21,7 +21,7 @@
                 <a href="/Default/ClassesIndex/" class="nav-item nav-link">Eğitim Grupları</a>
                 <a href="/Default/TeachersIndex/" class="nav-item nav-link">Öğretmenler</a>
                 <a href="/Default/GalleryIndex/" class="nav-item nav-link">Galeri</a>
-                <a href="/Default/ContactIndex" class="nav-item nav-link">İletişim</a>
+                <a href="/Contact/Index/" class="nav-item nav-link">İletişim</a>
             </div>
             <a href="" class="btn btn-primary px-4">Hemen Başvur</a>
         </div>
