--- a/KidKinder/Views/Teacher/TeacherList.cshtml
+++ b/KidKinder/Views/Teacher/TeacherList.cshtml
@@ -3,8 +3,8 @@
     ViewBag.Title = "TeacherList";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
+<center><h2>Öğretmen Listesi</h2></center>
 
-<h2>Öğretmen Listesi</h2>
 <link href="~/Template/KidAdmin/assets/css/Form1.css" rel="stylesheet" />
 <table>
 
