--- a/KidKinder/Template/KidAdmin/assets/css/Form1.css
+++ b/KidKinder/Template/KidAdmin/assets/css/Form1.css
@@ -14,7 +14,8 @@
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
-    width: 400px;
+    width: 600px;
+    margin-bottom:0px;
 }
 
     .form-container label {
@@ -38,6 +39,7 @@
         cursor: pointer;
         border-radius: 5px;
     }
+
 
 
 
