--- a/KidKinder/Views/AdminLayout/partialSideBar.cshtml
+++ b/KidKinder/Views/AdminLayout/partialSideBar.cshtml
@@ -32,21 +32,21 @@
                 </a>
             </li>
             <li class="">
-                <a href="index.html" class="waves-effect waves-dark">
+                <a href="/Student/Index/" class="waves-effect waves-dark">
                     <span class="pcoded-micon"><i class="ti-briefcase"></i><b>D</b></span>
                     <span class="pcoded-mtext">Öğrenciler</span>
                     <span class="pcoded-mcaret"></span>
                 </a>
             </li>
             <li class="">
-                <a href="index.html" class="waves-effect waves-dark">
+                <a href="/Parent/Index/" class="waves-effect waves-dark">
                     <span class="pcoded-micon"><i class="ti-user"></i><b>D</b></span>
                     <span class="pcoded-mtext">Veliler</span>
                     <span class="pcoded-mcaret"></span>
                 </a>
             </li>
             <li class="">
-                <a href="index.html" class="waves-effect waves-dark">
+                <a href="/Service/Index/" class="waves-effect waves-dark">
                     <span class="pcoded-micon"><i class="ti-cup"></i><b>D</b></span>
                     <span class="pcoded-mtext">Hizmetler</span>
                     <span class="pcoded-mcaret"></span>
