--- a/KidKinder/Views/Classes/DetailClasses.cshtml
+++ b/KidKinder/Views/Classes/DetailClasses.cshtml
@@ -1,5 +1,5 @@
 ﻿@using KidKinder.Models.Entities
-@model List<ClassRoom> 
+@model List<ClassRoom>
 
 @{
     ViewBag.Title = "DetailClasses";
@@ -17,22 +17,23 @@
         <th>Ders Saati</th>
         <th>Ücret</th>
         <th>Resim</th>
+        <th>Güncelle</th>
     </tr>
 
-    @foreach(var item in Model)
-            {
-             <tr>
-                 <td>@item.Title</td>
-                 <td>@item.Description</td>
-                 <td>@item.AgeOfKids</td>
-                 <td>@item.TotalSeat</td>
-                 <td>@item.ClassTime</td>
-                 <td>@item.Price</td>
-                 <td><img src=@item.ImageUrl  style="width:100px; height:70px;"/></td>
-             </tr>
-            }
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@item.Title</td>
+            <td>@item.Description</td>
+            <td>@item.AgeOfKids</td>
+            <td>@item.TotalSeat</td>
+            <td>@item.ClassTime</td>
+            <td>@item.Price</td>
+            <td><img src=@item.ImageUrl style="width:100px; height:70px;" /></td>
+            <td><a href="/Classes/BringClass/@item.ClassRoomId" class="btn btn-outline-warning"><i class="fa fa-edit"></i>Güncelle</a></td>
+        </tr>
+    }
 
 </table>
 
 <a href="/Classes/Index/" class="btn btn-outline-secondary"><i class=" fa fa-mail-reply-all"></i>Geri</a>
- 
