--- a/KidKinder/Views/AdminLayout/partialSideBar.cshtml
+++ b/KidKinder/Views/AdminLayout/partialSideBar.cshtml
@@ -11,7 +11,7 @@
         </div>
         <ul class="pcoded-item pcoded-left-item">
             <li class="">
-                <a href="index.html" class="waves-effect waves-dark">
+                <a href="/Dashboard/Index/" class="waves-effect waves-dark">
                     <span class="pcoded-micon"><i class="ti-stats-up"></i><b>D</b></span>
                     <span class="pcoded-mtext">Dashboard</span>
                     <span class="pcoded-mcaret"></span>
