--- a/KidKinder/Views/Classes/BringClass.cshtml
+++ b/KidKinder/Views/Classes/BringClass.cshtml
@@ -4,42 +4,77 @@
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<link rel="stylesheet" href="~/Template/KidAdmin/assets/css/Form1.css" />
 
-
-<div class="container">
-    <div class="form-container">
-        @using (Html.BeginForm("UpdateClass", "Classes", FormMethod.Post))
-        {
-            <form>
-          
-                @Html.TextBoxFor(x=>x.ClassRoomId, new {  @type="hidden"})
-                <br />
-                <label>Başlık</label>
-                @Html.TextBoxFor(x=>x.Title)
-                <br />
-                <label>Açıklama</label>
-                @Html.TextBoxFor(x=>x.Description)
-                <br />
-                <label>Yaş Aralığı</label>
-                @Html.TextBoxFor(x=>x.AgeOfKids)
-                <br />
-                <label>Toplam Ders</label>
-                @Html.TextBoxFor(x=>x.TotalSeat)
-                <br />
-                <label>Ders Saati</label>
-                @Html.TextBoxFor(x=>x.ClassTime)
-                <br />
-                <label>Ücret</label>
-                @Html.TextBoxFor(x=>x.Price)
-                <br />
-                <lable>Resim Yolu</lable>
-                @Html.TextBoxFor(x=>x.ImageUrl)
-                <br />
-
-                <button class="btn btn-outline-secondary">Güncelle</button>
-            </form>
-        }
-
+<div class="main-body">
+    <div class="page-wrapper">
+        <div class="page-body">
+            <div class="row">
+                <div class="col-sm-12">
+                    <!-- Basic Form Inputs card start -->
+                    <div class="card">
+                        <div class="card-header">
+                            <h5>Yeni Sınıf Kayıt Sayfası</h5>
+                        </div>
+                        <div class="card-block">
+                            @using (Html.BeginForm("UpdateClass", "Classes", FormMethod.Post))
+                            {
+                            <form method="post">
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Başlık :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.ClassRoomId, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Başlık :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.Title, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Açıklama :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.Description, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Yaş Aralığı :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.AgeOfKids, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Toplam Ders :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.TotalSeat, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Başlangıç Saati :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.ClassTime, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Ücret :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.Price, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Resim Uzantısı :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <button class="btn btn-outline-secondary">Güncelle</button>
+                            </form>
+                            }
+                        </div>
+                    </div>
+                    <!-- Basic Form Inputs card end -->
+                </div>
+            </div>
+        </div>
     </div>
 </div>
