--- a/KidKinder/Views/Classes/Create.cshtml
+++ b/KidKinder/Views/Classes/Create.cshtml
@@ -4,42 +4,72 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
-<link href="~/Template/KidAdmin/assets/css/Form1.css" rel="stylesheet" />
 
-@using (Html.BeginForm("NewClass", "Classes", FormMethod.Post))
-{
+<div class="main-body">
+    <div class="page-wrapper">
+        <div class="page-body">
+            <div class="row">
+                <div class="col-sm-12">
+                    <!-- Basic Form Inputs card start -->
+                    <div class="card">
+                        <div class="card-header">
+                            <h5>Yeni Sınıf Kayıt Sayfası</h5>
+                        </div>
+                        <div class="card-block">
+                            @using (Html.BeginForm("NewClass", "Classes", FormMethod.Post))
+                            {
+                            <form method="post">
 
-    <div class="container">
-        <div class="form-container">
-
-            <form method="post">
-                <label>Başlık</label>
-                @Html.TextBoxFor(x => x.Title, new { @required ="required"})
-                <br />
-
-                <label>Açıklama</label>
-                @Html.TextBoxFor(x => x.Description, new { @required = "required" })
-                <br />
-                <label>Yaş Aralığı</label>
-                @Html.TextBoxFor(x => x.AgeOfKids, new { @required = "required" })
-                <br />
-                <label>Toplam Ders</label>
-                @Html.TextBoxFor(x => x.TotalSeat, new { @required = "required" })
-                <br />
-                <label>Saat </label>
-                @Html.TextBoxFor(x => x.ClassTime, new { @required = "required" })
-                <br />
-                <label>Ücret</label>
-                @Html.TextBoxFor(x => x.Price, new { @required = "required" })
-                <br />
-                <label>Resim Yolu</label>
-                @Html.TextBoxFor(x => x.ImageUrl, new { @required = "required" })
-                <br />
-                <button class="btn btn-outline-success">Kaydet</button>
-            </form>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Başlık :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.Title, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Açıklama :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.Description, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Yaş Aralığı :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.AgeOfKids, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Toplam Ders :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.TotalSeat, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Başlangıç Saati :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.ClassTime, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Ücret :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.Price, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Resim Uzantısı :</label>
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control form-control-round", @required = "required" })
+                                    </div>
+                                </div>
+                                <button class="btn btn-success">KAYDET</button>
+                            </form>
+                            }
+                            </div>
+                    </div>
+                    <!-- Basic Form Inputs card end -->
+                </div>
+            </div>
         </div>
     </div>
-
-}
-
-
+</div>
