--- a/KidKinder/Views/Parent/Index.cshtml
+++ b/KidKinder/Views/Parent/Index.cshtml
@@ -6,36 +6,62 @@
 }
 
 
-<link rel="stylesheet" href="~/Template/KidAdmin/assets/css/Form1.css" /> 
-<center>
-    <h2>Veli Listesi</h2>
-</center>
-
-<br />
-<table>
-    <tr>
-        <th>ID</th>
-        <th>İsim</th>
-        <th>Soyisim</th>
-        <th>E-Posta</th>
-        <th>Telefon Numarası</th>
-        <th>Adres</th>
-        <th>Güncelle</th>
-        <th>Sil</th>
-    </tr>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>@item.ParentID</td>
-            <td>@item.FirstName</td>
-            <td>@item.LastName</td>
-            <td>@item.Email</td>
-            <td>@item.PhoneNumber</td>
-            <td>@item.Address</td>
-            <td><a href="/Parent/BringParent/@item.ParentID" class="btn btn-outline-secondary"><i class="fa fa-edit"></i>Güncelle</a></td>
-            <td><a href="/Parent/Delete/@item.ParentID" class="btn btn-outline-danger"><i class="fa fa-times-circle"></i>Sil</a></td>
-        </tr>
-    }
-
-</table>
-<a href="/Parent/Create/" class="btn btn-outline-success"><i class="fa fa-plus-circle"></i>Yeni Kayıt</a>
+<div class="pcoded-inner-content">
+    <!-- Main-body start -->
+    <div class="main-body">
+        <div class="page-wrapper">
+            <!-- Page-body start -->
+            <div class="page-body">
+                <div class="card">
+                    <div class="card-header">
+                        <h5>Veli Listesi</h5>
+                        <span>Velilere ait bilgilere ulaşabilirsiniz.</span>
+                        <div class="card-header-right">
+                            <ul class="list-unstyled card-option">
+                                <li><i class="fa fa fa-wrench open-card-option"></i></li>
+                                <li><i class="fa fa-window-maximize full-card"></i></li>
+                                <li><i class="fa fa-minus minimize-card"></i></li>
+                                <li><i class="fa fa-refresh reload-card"></i></li>
+                                <li><i class="fa fa-trash close-card"></i></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card-block table-border-style">
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>İsim</th>
+                                        <th>Soyisim</th>
+                                        <th>E-Posta</th>
+                                        <th>Telefon Numarası</th>
+                                        <th>Adres</th>
+                                        <th>Güncelle</th>
+                                        <th>Sil</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr>
+                                            <td>@item.ParentID</td>
+                                            <td>@item.FirstName</td>
+                                            <td>@item.LastName</td>
+                                            <td>@item.Email</td>
+                                            <td>@item.PhoneNumber</td>
+                                            <td>@item.Address</td>
+                                            <td><a href="/Parent/BringParent/@item.ParentID" class="btn btn-outline-secondary"><i class="fa fa-edit"></i>Güncelle</a></td>
+                                            <td><a href="/Parent/Delete/@item.ParentID" class="btn btn-outline-danger"><i class="fa fa-times-circle"></i>Sil</a></td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                            <a href="/Parent/Create/" class="btn btn-outline-success"><i class="fa fa-plus-circle"></i>Yeni Kayıt</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
