--- a/KidKinder/Views/Service/Create.cshtml
+++ b/KidKinder/Views/Service/Create.cshtml
@@ -4,40 +4,53 @@
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<link rel="stylesheet" href="~/Template/KidAdmin/assets/css/Form1.css" />
 
-<div class="container">
-    <div class="form-container" style="width:750px; height:450px;">
-        @using (Html.BeginForm("Created", "Service", FormMethod.Post))
-        {
-            <form class="form-container">
-                <div style="text-align:center; font-size:25px;">
-                    <label style="">YENİ HİZMET SAYFASI</label>
+<div class="main-body">
+    <div class="page-wrapper">
+        <div class="page-body">
+            <div class="row">
+                <div class="col-sm-12">
+                    <!-- Basic Form Inputs card start -->
+                    <div class="card">
+                        <div class="card-header">
+                            <h5>Yeni Sınıf Kayıt Sayfası</h5>
+                        </div>
+                        <div class="card-block">
+                            @using (Html.BeginForm("Created", "Service", FormMethod.Post))
+                            {
+                                <form method="post">
+
+                                    <div class="form-group row">
+                                        <div class="col-sm-10">
+                                            @Html.TextBoxFor(x => x.ServiceId, new { @class = "form-control form-control-round", @required = "required" })
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-2 col-form-label">Başlık :</label>
+                                        <div class="col-sm-10">
+                                            @Html.TextBoxFor(x => x.Title, new { @class = "form-control form-control-round", @required = "required" })
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-2 col-form-label">Açıklama :</label>
+                                        <div class="col-sm-10">
+                                            @Html.TextBoxFor(x => x.Description, new { @class = "form-control form-control-round", @required = "required" })
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-2 col-form-label">İkon Url :</label>
+                                        <div class="col-sm-10">
+                                            @Html.TextBoxFor(x => x.IconUrl, new { @class = "form-control form-control-round", @required = "required" })
+                                        </div>
+                                    </div>
+                                    <button class="btn btn-success">KAYDET</button>
+                                </form>
+                            }
+                        </div>
+                    </div>
+                    <!-- Basic Form Inputs card end -->
                 </div>
-                
-                @Html.TextBoxFor(x => x.ServiceId, new {@type="hidden"})
-                <br />
-                <label>Başlık</label>
-                @Html.TextBoxFor(x => x.Title,new { @required="required"})
-                <br />
-                <br />
-
-                <label>Açıklama</label>
-                @Html.TextBoxFor(x => x.Description, new { @required = "required" })
-                <br />
-                <br />
-                <label>İkon</label>
-                @Html.TextBoxFor(x => x.IconUrl, new { @required = "required"})
-                <br />
-                <br />
-                <div style="text-align:center;">
-                    <button>Kaydet</button>
-                </div>
-                
-            </form>
-        }
-
-
+            </div>
+        </div>
     </div>
 </div>
-
