--- a/KidKinder/Views/Service/Index.cshtml
+++ b/KidKinder/Views/Service/Index.cshtml
@@ -6,31 +6,60 @@
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<link href="~/Template/KidAdmin/assets/css/Form1.css" rel="stylesheet" />
 <link href="~/Template/KidKinder/lib/flaticon/font/flaticon.css" rel="stylesheet" />
-
-
-    <table>
-        <tr>
-            <th>Hizmet Başlığı</th>
-            <th>Açıklama</th>
-            <th>İkon</th>
-            <th>Güncelle</th>
-            <th>Sil</th>
-        </tr>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.Title</td>
-                <td>@item.Description</td>
-                <td><i class="@item.IconUrl" style="color:red"></i></td>
-                <td><a href="/Service/BringService/@item.ServiceId" class="btn btn-outline-secondary"><i class="fa fa-edit"></i>Güncelle</a></td>
-                <td><a href="/Service/Delete/@item.ServiceId" class="btn btn-outline-danger"><i class="fa fa-edit"></i>Sil</a></td>
-            </tr>
-        }
-
-    </table>
-    <a href="/Service/Create/" class="btn btn-outline-primary"><i class="fa fa-plus-circle"></i>Yeni Hizmet</a>
+    <div class="pcoded-inner-content">
+        <!-- Main-body start -->
+        <div class="main-body">
+            <div class="page-wrapper">
+                <!-- Page-body start -->
+                <div class="page-body">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5>Hizmet Listesi</h5>
+                            <span>Mevcut hizmetlerimizi görüntüleyebilir, yeni hizmet oluşturabilir ve çeşitli özelleştirmeler yapabilirsiniz.</span>
+                            <div class="card-header-right">
+                                <ul class="list-unstyled card-option">
+                                    <li><i class="fa fa fa-wrench open-card-option"></i></li>
+                                    <li><i class="fa fa-window-maximize full-card"></i></li>
+                                    <li><i class="fa fa-minus minimize-card"></i></li>
+                                    <li><i class="fa fa-refresh reload-card"></i></li>
+                                    <li><i class="fa fa-trash close-card"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-block table-border-style">
+                            <div class="table-responsive">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Hizmet Başlığı</th>
+                                            <th>Açıklama</th>
+                                            <th>İkon</th>
+                                            <th>Güncelle</th>
+                                            <th>Sil</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var item in Model)
+                                        {
+                                            <tr>
+                                                <td>@item.Title</td>
+                                                <td>@item.Description</td>
+                                                <td><i class="@item.IconUrl" style="color:blueviolet"></i></td>
+                                                <td><a href="/Service/BringService/@item.ServiceId" class="btn btn-outline-secondary"><i class="fa fa-edit"></i>Güncelle</a></td>
+                                                <td><a href="/Service/Delete/@item.ServiceId" class="btn btn-outline-danger"><i class="fa fa-edit"></i>Sil</a></td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                                <a href="/Service/Create/" class="btn btn-outline-primary"><i class="fa fa-plus-circle"></i>Yeni Hizmet</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
