--- a/KidKinder/Views/Teacher/BringTeacher.cshtml
+++ b/KidKinder/Views/Teacher/BringTeacher.cshtml
@@ -4,31 +4,54 @@
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<link rel="stylesheet" href="~/Template/KidAdmin/assets/css/Form1.css" />
+<div class="main-body">
+    <div class="page-wrapper">
+        <div class="page-body">
+            <div class="row">
+                <div class="col-sm-12">
+                    <!-- Basic Form Inputs card start -->
+                    <div class="card">
+                        <div class="card-header">
+                            <h5>Yeni Sınıf Kayıt Sayfası</h5>
+                        </div>
+                        <div class="card-block">
+                            @using (Html.BeginForm("Update", "Teacher", FormMethod.Post))
+                            {
+                                <form method="post">
 
-
-<div class="container">
-    <div class="form-container">
-        @using (Html.BeginForm("Update", "Teacher", FormMethod.Post))
-        {
-            <form method="post">
-                <label>ID</label>
-                @Html.TextBoxFor(x=>x.TeacherId,new { @type="hidden"})
-                <br />
-                <label>Ad-Soyad</label>
-                @Html.TextBoxFor(x => x.NameSurname)
-                <br />
-                <label>Branş</label>
-                @Html.TextBoxFor(x => x.Title)
-                <br />
-                <label>Resim Yolu</label>
-                @Html.TextBoxFor(x => x.ImageUrl)
-                <br />
-                <button class="btn btn-outline-secondary">Güncelle</button>
-            </form>
-        }
+                                    <div class="form-group row">
+                                        <label class="col-sm-2 col-form-label">Başlık :</label>
+                                        <div class="col-sm-10">
+                                            @Html.TextBoxFor(x => x.TeacherId, new { @class = "form-control form-control-round", @required = "required" })
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-2 col-form-label">Açıklama :</label>
+                                        <div class="col-sm-10">
+                                            @Html.TextBoxFor(x => x.NameSurname, new { @class = "form-control form-control-round", @required = "required" })
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-2 col-form-label">Yaş Aralığı :</label>
+                                        <div class="col-sm-10">
+                                            @Html.TextBoxFor(x => x.Title, new { @class = "form-control form-control-round", @required = "required" })
+                                        </div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-sm-2 col-form-label">Toplam Ders :</label>
+                                        <div class="col-sm-10">
+                                            @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control form-control-round", @required = "required" })
+                                        </div>
+                                    </div> 
+                                    <button class="btn btn-outline-secondary">Güncelle</button>
+                                </form>
+                            }
+                        </div>
+                    </div>
+                    <!-- Basic Form Inputs card end -->
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-
-
 
