--- a/KidKinder/Views/Teacher/TeacherList.cshtml
+++ b/KidKinder/Views/Teacher/TeacherList.cshtml
@@ -3,30 +3,59 @@
     ViewBag.Title = "TeacherList";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
-<center><h2>Öğretmen Listesi</h2></center>
 
-<link href="~/Template/KidAdmin/assets/css/Form1.css" rel="stylesheet" />
-<table>
 
-    <tr>
-        <th>#</th>
-        <th>Öğretmen Adı</th>
-        <th>Branşı</th>
-        <th>Sil</th>
-        <th>Güncelle</th>
-    </tr>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>@item.TeacherId</td>
-            <td>@item.NameSurname</td>
-            <td>@item.Title</td>
-            
-            <td><a href="/Teacher/BringTeacher/@item.TeacherId" class="btn btn-outline-dark"><i class="fa fa-edit"></i>Güncelle</a></td>
-            <td><a href="/Teacher/DeleteTeacher/@item.TeacherId" class="btn btn-outline-danger"><i class="fa fa-times-circle"></i>Sil</a></td>
-        </tr>
-    }
+<div class="pcoded-inner-content">
+    <!-- Main-body start -->
+    <div class="main-body">
+        <div class="page-wrapper">
+            <!-- Page-body start -->
+            <div class="page-body">
+                <div class="card">
+                    <div class="card-header">
+                        <h5>Öğretmen Listesi</h5>
+                        <span>Öğretmenler ile ilgili işlemleri yapabileceğiniz tabloyu listeliyorsunuz.</span>
+                        <div class="card-header-right">
+                            <ul class="list-unstyled card-option">
+                                <li><i class="fa fa fa-wrench open-card-option"></i></li>
+                                <li><i class="fa fa-window-maximize full-card"></i></li>
+                                <li><i class="fa fa-minus minimize-card"></i></li>
+                                <li><i class="fa fa-refresh reload-card"></i></li>
+                                <li><i class="fa fa-trash close-card"></i></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card-block table-border-style">
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>Ad Soyad</th>
+                                        <th>Branş</th>
+                                        <th>Güncelle</th>
+                                        <th>Sil</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
+                                        <tr>
+                                            <td>@item.TeacherId</td>
+                                            <td>@item.NameSurname</td>
+                                            <td>@item.Title</td>
 
-</table>
-<a href="/Teacher/CreateTeacher/" class="btn btn-outline-success"><i class="fa fa-plus-circle"></i>Yeni Öğretmen Girişi</a>
-
+                                            <td><a href="/Teacher/BringTeacher/@item.TeacherId" class="btn btn-outline-dark"><i class="fa fa-edit"></i>Güncelle</a></td>
+                                            <td><a href="/Teacher/DeleteTeacher/@item.TeacherId" class="btn btn-outline-danger"><i class="fa fa-times-circle"></i>Sil</a></td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                            <a href="/Teacher/CreateTeacher/" class="btn btn-outline-success"><i class="fa fa-plus-circle"></i>Yeni Öğretmen Girişi</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
