--- a/KidKinder/Views/AdminLayout/partialNavbarProfileHeader.cshtml
+++ b/KidKinder/Views/AdminLayout/partialNavbarProfileHeader.cshtml
@@ -17,13 +17,8 @@
             </a>
         </li>
         <li class="waves-effect waves-light">
-            <a href="email-inbox.html">
+            <a href="/Message/InBox/">
                 <i class="ti-email"></i> Mesajlarım         </a>
-        </li>
-        <li class="waves-effect waves-light">
-            <a href="auth-lock-screen.html">
-                <i class="ti-lock"></i> Ekranı Kilitle
-            </a>
         </li>
         <li class="waves-effect waves-light">
             <a href="auth-normal-sign-in.html">
