--- a/KidKinder/Views/Dashboard/Index.cshtml
+++ b/KidKinder/Views/Dashboard/Index.cshtml
@@ -1,76 +1,283 @@
-﻿
+﻿@using KidKinder.Models.Entities
+@model List<Teacher>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
-<link rel="stylesheet" type="text/css" href="~/Template/KidAdmin/assets/css/font-awesome-n.min.css">
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <!-- Favicon icon -->
+    <link rel="icon" href="~/Template/KidAdmin/assets/images/favicon.ico" type="image/x-icon">
+    <!-- Google font-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+    <!-- waves.css -->
+    <link rel="stylesheet" href="~/Template/KidAdmin/assets/pages/waves/css/waves.min.css" type="text/css" media="all">
+    <!-- Required Fremwork -->
+    <link rel="stylesheet" type="text/css" href="~/Template/KidAdmin/assets/css/bootstrap/css/bootstrap.min.css">
+    <!-- waves.css -->
+    <link rel="stylesheet" href="~/Template/KidAdmin/assets/pages/waves/css/waves.min.css" type="text/css" media="all">
+    <!-- themify icon -->
+    <link rel="stylesheet" type="text/css" href="~/Template/KidAdmin/assets/icon/themify-icons/themify-icons.css">
+    <!-- font-awesome-n -->
+    <link rel="stylesheet" type="text/css" href="~/Template/KidAdmin/assets/css/font-awesome-n.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Template/KidAdmin/assets/css/font-awesome.min.css">
+    <!-- scrollbar.css -->
+    <link rel="stylesheet" type="text/css" href="~/Template/KidAdmin/assets/css/jquery.mCustomScrollbar.css">
+    <!-- Style.css -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 
-
-<div class="pcoded-inner-content">
-    <!-- Main-body start -->
-    <div class="main-body">
-        <div class="page-wrapper">
-            <!-- Page-body start -->
-            <div class="page-body">
-                <div class="row">
-
+<div class="main-body">
+    <div class="page-wrapper">
+        <!-- Page-body start -->
+        <div class="page-body">
+            <div class="row">
+                <!-- Material statustic card start -->
+                <div class="col-xl-4 col-md-12">
+                    <div class="card mat-stat-card">
+                        <div class="card-block">
+                            <div class="row align-items-center b-b-default">
+                                <div class="col-sm-6 b-r-default p-b-20 p-t-20">
+                                    <div class="row align-items-center text-center">
+                                        <div class="col-4 p-r-0">
+                                            <i class="fa-solid fa-school text-c-yellow f-24"></i>
+                                        </div>
+                                        <div class="col-8 p-l-0">
+                                            <h5>@ViewBag.toplamDers</h5>
+                                            <p class="text-muted m-b-0">Sınıfımız Mevcut</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 p-b-20 p-t-20">
+                                    <div class="row align-items-center text-center">
+                                        <div class="col-4 p-r-0">
+                                            <i class="fa-solid fa-person-chalkboard text-c-green f-24"></i>
+                                            
+                                        </div>
+                                        <div class="col-8 p-l-0">
+                                            <h5>@ViewBag.countTeach</h5>
+                                            
+                                            <p class="text-muted m-b-0">Öğretmenimiz Bizlerle</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row align-items-center">
+                                <div class="col-sm-6 p-b-20 p-t-20 b-r-default">
+                                    <div class="row align-items-center text-center">
+                                        <div class="col-4 p-r-0">
+                                            <i class="far fa-calendar-check text-c-red f-24"></i>
+                                        </div>
+                                        <div class="col-8 p-l-0">
+                                          <h5>@ViewBag.countSeat</h5>
+                                            <p class="text-muted m-b-0">Kişi Randevu Aldı</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 p-b-20 p-t-20">
+                                    <div class="row align-items-center text-center">
+                                        <div class="col-4 p-r-0">
+                                            <i class="fa-solid fa-heart text-c-blue f-24"></i>
+                                        </div>
+                                        <div class="col-8 p-l-0">
+                                            <h5>@ViewBag.countSubs</h5>
+                                            <p class="text-muted m-b-0">Kişi Abone Oldu</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <div class="col-xl-4 col-md-12">
+                    <div class="card mat-stat-card">
+                        <div class="card-block">
+                            <div class="row align-items-center b-b-default">
+                                <div class="col-sm-6 b-r-default p-b-20 p-t-20">
+                                    <div class="row align-items-center text-center">
+                                        <div class="col-4 p-r-0">
+                                            <i class="fa fa-coins text-c-purple f-60"></i>
+                                        </div>
+                                        <div class="col-8 p-l-0">
+                                            <h5>@ViewBag.soCheap</h5>
+                                            <p class="text-muted m-b-0">En Uygun Fiyat</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 p-b-20 p-t-20">
+                                    <div class="row align-items-center text-center">
+                                        <div class="col-4 p-r-0">
+                                            <i class="fas fa-clock text-c-green f-24"></i>
+                                        </div>
+                                        <div class="col-8 p-l-0">
+                                            <h5>@ViewBag.mostSeat</h5>
+                                            <p class="text-muted m-b-0">En Uzun Kur</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row align-items-center">
+                                <div class="col-sm-6 p-b-20 p-t-20 b-r-default">
+                                    <div class="row align-items-center text-center">
+                                        <div class="col-4 p-r-0">
+                                            <i class="fas fa-face-grin-tears text-c-red f-24"></i>
+                                        </div>
+                                        <div class="col-8 p-l-0">
+                                            <h5>@ViewBag.sumService</h5>
+                                            <p class="text-muted m-b-0">Eğlence Alanımız</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 p-b-20 p-t-20">
+                                    <div class="row align-items-center text-center">
+                                        <div class="col-4 p-r-0">
+                                            <i class="fas fa-thumbs-up text-c-blue f-24"></i>
+                                        </div>
+                                        <div class="col-8 p-l-0">
+                                            <h5>@ViewBag.sendMess</h5>
+                                            <p class="text-muted m-b-0">Kişi Bizi Değerlendirdi</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-12">
+                    <div class="card mat-clr-stat-card text-white green ">
+                        <div class="card-block">
+                            <div class="row">
+                                <div class="col-3 text-center bg-c-green">
+                                    <i class="fas fa-star mat-icon f-24"></i>
+                                </div>
+                                <div class="col-9 cst-cont">
+                                    <h5>4000+</h5>
+                                    <p class="m-b-0">Ratings Received</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mat-clr-stat-card text-white blue">
+                        <div class="card-block">
+                            <div class="row">
+                                <div class="col-3 text-center bg-c-blue">
+                                    <i class="fas fa-trophy mat-icon f-24"></i>
+                                </div>
+                                <div class="col-9 cst-cont">
+                                    <h5>17</h5>
+                                    <p class="m-b-0">Achievements</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Material statustic card end -->
+                <!-- order-visitor start -->
+                <!-- order-visitor end -->
+                <!--  sale analytics start -->
+                <div class="col-xl-6 col-md-12">
+                    <div class="card table-card">
+                        <div class="card-header">
+                            <h5>Okulumuzun Emektarları</h5>
+                            <div class="card-header-right">
+                                <ul class="list-unstyled card-option">
+                                    <li><i class="fa fa fa-wrench open-card-option"></i></li>
+                                    <li><i class="fa fa-window-maximize full-card"></i></li>
+                                    <li><i class="fa fa-minus minimize-card"></i></li>
+                                    <li><i class="fa fa-refresh reload-card"></i></li>
+                                    <li><i class="fa fa-trash close-card"></i></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-block">
+                            <div class="table-responsive">
+                                <table class="table table-hover m-b-0 without-header">
+                                    <tbody>
+                                        @foreach (var item in Model)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    <div class="d-inline-block align-middle">
+                                                        <img src="@item.ImageUrl" alt="user image" class="img-radius img-40 align-top m-r-15">
+                                                        <div class="d-inline-block">
+                                                            <h6>@item.NameSurname</h6>
+                                                            <p class="text-muted m-b-0">@item.Title</p>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td class="text-right">
+                                                    <h6>@item.WorkTime - Aydır Bizimle<i class="fas fa-face-smile-wink text-c-red m-l-10"></i></h6>
+                                                </td>
+                                            </tr>
+                                        }
+
+
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-md-12">
+                    <div class="row">
+                        <!-- sale card start -->
+
+                        <div class="col-md-6">
+                            <div class="card text-center order-visitor-card">
+                                <div class="card-block">
+                                    <h6 class="m-b-0">Total Subscription</h6>
+                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-arrow-down m-r-15 text-c-red"></i>7652</h4>
+                                    <p class="m-b-0">48% From Last 24 Hours</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card text-center order-visitor-card">
+                                <div class="card-block">
+                                    <h6 class="m-b-0">Order Status</h6>
+                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-arrow-up m-r-15 text-c-green"></i>6325</h4>
+                                    <p class="m-b-0">36% From Last 6 Months</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card text-center order-visitor-card">
+                                <div class="card-block">
+                                    <h6 class="m-b-0">Unique Visitors</h6>
+                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-arrow-down m-r-15 text-c-red"></i>652</h4>
+                                    <p class="m-b-0">36% From Last 6 Months</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card text-center order-visitor-card">
+                                <div class="card-block">
+                                    <h6 class="m-b-0">Monthly Earnings</h6>
+                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-arrow-up m-r-15 text-c-green"></i>5963</h4>
+                                    <p class="m-b-0">36% From Last 6 Months</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- sale card end -->
+                    </div>
+                </div>
+
+                <!--  sale analytics end -->
+                <!-- Project statustic start -->
+                <div class="col-xl-12">
+                    <div class="card proj-progress-card">
+                        <div class="card-block">
+                            <div class="row">
+                              
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project statustic end -->
             </div>
         </div>
+        <!-- Page-body end -->
     </div>
-</div>
-
-<div class="col-xl-4 col-md-12">
-    <div class="card mat-stat-card">
-        <div class="card-block">
-            <div class="row align-items-center b-b-default">
-                <div class="col-sm-6 b-r-default p-b-20 p-t-20">
-                    <div class="row align-items-center text-center">
-                        <div class="col-4 p-r-0">
-                            <i class="far fa-user text-c-purple f-24"></i>
-                        </div>
-                        <div class="col-8 p-l-0">
-                            <h5>10K</h5>
-                            <p class="text-muted m-b-0">Visitors</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 p-b-20 p-t-20">
-                    <div class="row align-items-center text-center">
-                        <div class="col-4 p-r-0">
-                            <i class="fas fa-volume-down text-c-green f-24"></i>
-                        </div>
-                        <div class="col-8 p-l-0">
-                            <h5>100%</h5>
-                            <p class="text-muted m-b-0">Volume</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row align-items-center">
-                <div class="col-sm-6 p-b-20 p-t-20 b-r-default">
-                    <div class="row align-items-center text-center">
-                        <div class="col-4 p-r-0">
-                            <i class="far fa-file-alt text-c-red f-24"></i>
-                        </div>
-                        <div class="col-8 p-l-0">
-                            <h5>2000+</h5>
-                            <p class="text-muted m-b-0">Files</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 p-b-20 p-t-20">
-                    <div class="row align-items-center text-center">
-                        <div class="col-4 p-r-0">
-                            <i class="far fa-envelope-open text-c-blue f-24"></i>
-                        </div>
-                        <div class="col-8 p-l-0">
-                            <h5>120</h5>
-                            <p class="text-muted m-b-0">Mails</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="styleSelector"> </div>
 </div>
