--- a/KidKinder/Views/AdminLayout/partialHeader.cshtml
+++ b/KidKinder/Views/AdminLayout/partialHeader.cshtml
@@ -2,7 +2,7 @@
     <div class="page-block">
         <div class="row align-items-center">
             <div class="col-md-8">
-                <div class="page-header-title">
+                <div class="page-header-title"><i></i>
                     <h5 class="m-b-10">Kidkinder Admin Paneli</h5>
                     <p class="m-b-0">Uygulamaya dair detayların yer aldığı, ekleme-silme-güncelleme gibi işlemlerin gerçekleştirildiği yönetim sayfasıdır.</p>
                 </div>
