--- a/KidKinder/Views/AdminLayout/Index.cshtml
+++ b/KidKinder/Views/AdminLayout/Index.cshtml
@@ -12,7 +12,7 @@
  @Html.Action("partialPreLoader","AdminLayout")
     <div id="pcoded" class="pcoded">
         <div class="pcoded-overlay-box"></div>
-        <div class="pcoded-container navbar-wrapper">
+        <div class="pcoded-container navbar-wrapper"><i></i>
             @Html.Action("partialNavbar","AdminLayout")
 
             <div class="pcoded-main-container">
