--- a/KidKinder/Views/Dashboard/Index.cshtml
+++ b/KidKinder/Views/Dashboard/Index.cshtml
@@ -99,7 +99,7 @@
                                             <i class="fa fa-coins text-c-purple f-60"></i>
                                         </div>
                                         <div class="col-8 p-l-0">
-                                            <h5>@ViewBag.soCheap</h5>
+                                            <h5>@ViewBag.soCheap TL</h5>
                                             <p class="text-muted m-b-0">En Uygun Fiyat</p>
                                         </div>
                                     </div>
@@ -151,8 +151,8 @@
                                     <i class="fas fa-star mat-icon f-24"></i>
                                 </div>
                                 <div class="col-9 cst-cont">
-                                    <h5>4000+</h5>
-                                    <p class="m-b-0">Ratings Received</p>
+                                    <h5>Ömer Yeşilbağ</h5>
+                                    <p class="m-b-0">Yıldız Öğrencimiz</p>
                                 </div>
                             </div>
                         </div>
@@ -164,8 +164,8 @@
                                     <i class="fas fa-trophy mat-icon f-24"></i>
                                 </div>
                                 <div class="col-9 cst-cont">
-                                    <h5>17</h5>
-                                    <p class="m-b-0">Achievements</p>
+                                    <h5>Mesut Yılmaz</h5>
+                                    <p class="m-b-0">En Çok Yıldız Alan</p>
                                 </div>
                             </div>
                         </div>
@@ -226,36 +226,32 @@
                         <div class="col-md-6">
                             <div class="card text-center order-visitor-card">
                                 <div class="card-block">
-                                    <h6 class="m-b-0">Total Subscription</h6>
-                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-arrow-down m-r-15 text-c-red"></i>7652</h4>
-                                    <p class="m-b-0">48% From Last 24 Hours</p>
+                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-instagram m-r-15 text-c-red"></i>Instagram</h4>
+                                    <p class="m-b-0">instagram.com/gozgirfaruk/</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="card text-center order-visitor-card">
                                 <div class="card-block">
-                                    <h6 class="m-b-0">Order Status</h6>
-                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-arrow-up m-r-15 text-c-green"></i>6325</h4>
-                                    <p class="m-b-0">36% From Last 6 Months</p>
+                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-github m-r-15 text-c-green"></i>Github</h4>
+                                    <p class="m-b-0">github.com/gozgirfaruk/</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="card text-center order-visitor-card">
                                 <div class="card-block">
-                                    <h6 class="m-b-0">Unique Visitors</h6>
-                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-arrow-down m-r-15 text-c-red"></i>652</h4>
-                                    <p class="m-b-0">36% From Last 6 Months</p>
+                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-linkedin m-r-15 text-c-red"></i>Linkedin</h4>
+                                    <p class="m-b-0">linkedin.com/in/gozgirfaruk</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="card text-center order-visitor-card">
                                 <div class="card-block">
-                                    <h6 class="m-b-0">Monthly Earnings</h6>
-                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-arrow-up m-r-15 text-c-green"></i>5963</h4>
-                                    <p class="m-b-0">36% From Last 6 Months</p>
+                                    <h4 class="m-t-15 m-b-15"><i class="fa fa-google m-r-15 text-c-green"></i>Google</h4>
+                                    <p class="m-b-0">gozgirfaruk@gmail.com</p>
                                 </div>
                             </div>
                         </div>
